# terminal-game

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
console_animation/: __main__.py
console_animation/lib/: engine.py  types.py
terminal-game/lib/: entities.py
terminal_game/: __main__.py
terminal_game/lib/: buffers.py  engine.py  entities.py  patterns.py  sprites.py  types.py
