[tool.poetry]
name = "terminal-game"
version = "0.1.0"
description = ""
authors = ["poopipe <ill_ness@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pynput = ">=1.7.8"
pywinctl = ">=0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
